# sqlforge

./: CLAUDE.md  FINDINGS.md  FUTURE.md  README.md  pyproject.toml
docs/: insert-design.md  parser-design.md  storage-design.md  tokenizer-design.md
output/: insert.py  parser.py  storage.py  test_parser.py  tokenizer.py
specs/: app.yaml  insert.yaml  parser.yaml  storage.yaml  tokenizer.yaml
sqlforge/: insert.py  parser.py  storage.py  tokenizer.py
tests/: test_insert.py  test_parser.py  test_storage.py  test_tokenizer.py
